# cpp-linter-action-sjis-example

./: .clangd  .gitignore  CMakeLists.txt  README.md  cmake-build-and-lint.yaml  main.cpp  print.cpp
.github/workflows/: cmake-build-and-lint.yaml
